// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backdrop render tests should be shown 1`] = `
<div
  aria-hidden="true"
  class="MuiBackdrop-root css-141wtso-MuiBackdrop-root"
  data-testid="backdrop-91b57774-d50c-4350-882d-363f80ac10e8"
  style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 css-1ronkt8-MuiPaper-root"
    style="--Paper-shadow: var(--mui-shadows-24);"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1yo0kkk-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-65dhei-MuiTypography-root"
          data-testid="message-91b57774-d50c-4350-882d-363f80ac10e8"
        >
          foo-message
        </h6>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
        style="line-height: 0;"
      >
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-tka88f-MuiCircularProgress-root"
          data-testid="progress-91b57774-d50c-4350-882d-363f80ac10e8"
          role="progressbar"
          style="width: 32px; height: 32px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Backdrop render tests should rendered without message and not show any errors 1`] = `
<div
  aria-hidden="true"
  class="MuiBackdrop-root css-141wtso-MuiBackdrop-root"
  data-testid="backdrop-91b57774-d50c-4350-882d-363f80ac10e8"
  style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 css-1ronkt8-MuiPaper-root"
    style="--Paper-shadow: var(--mui-shadows-24);"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-1yo0kkk-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root"
        style="line-height: 0;"
      >
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-tka88f-MuiCircularProgress-root"
          data-testid="progress-91b57774-d50c-4350-882d-363f80ac10e8"
          role="progressbar"
          style="width: 32px; height: 32px;"
        >
          <svg
            class="MuiCircularProgress-svg css-54pwck-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-19t5dcl-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;
